# PyFlightlog

./: .gitignore  README.md  airports.db  create-executable.txt  export.csv  flightlog.py  flightlog_gui.py  flugbuch.spec.old  pyproject.toml
pyflightlog/: edit_ratings.ui  edit_settings.ui  flightlog.py  flightlog_gui.py
