[tool.poetry]
name = "flightlog"
version = "0.1.0"
description = ""
authors = ["Fabian Bühler <buehler.fabian@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.2"
PySide2 = "^5.15.2.1"
requests = "^2.30.0"
python-dateutil = "^2.8.2"
cmd2 = "^2.4.3"
colorama = "^0.4.6"
flake8 = "^6.0.0"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
